// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkAutosuggest should render correctly 1`] = `
<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-owns="react-autowhatever-1"
  className="bpk-autosuggest__container"
  role="combobox"
>
  <input
    aria-activedescendant={null}
    aria-autocomplete="list"
    aria-controls="react-autowhatever-1"
    aria-invalid={false}
    autoComplete="off"
    className="bpk-input"
    id="origin"
    name="Origin"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    style={Object {}}
    type="text"
    value="Edinburgh"
  />
  <div
    className="bpk-autosuggest__suggestions-container"
    id="react-autowhatever-1"
    role="listbox"
  />
</div>
`;

exports[`BpkAutosuggest should render correctly with an "alwaysRenderSuggestions" attribute 1`] = `
<div
  aria-expanded={true}
  aria-haspopup="listbox"
  aria-owns="react-autowhatever-1"
  className="bpk-autosuggest__container bpk-autosuggest__container--open"
  role="combobox"
>
  <input
    aria-activedescendant={null}
    aria-autocomplete="list"
    aria-controls="react-autowhatever-1"
    aria-invalid={false}
    autoComplete="off"
    className="bpk-input"
    id="origin"
    name="Origin"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    style={Object {}}
    type="text"
    value="Edinburgh"
  />
  <div
    className="bpk-autosuggest__suggestions-container bpk-autosuggest__suggestions-container--open"
    id="react-autowhatever-1"
    role="listbox"
  >
    <ul
      className="bpk-autosuggest__suggestions-list"
      role="listbox"
    >
      <li
        aria-selected={false}
        className="bpk-autosuggest__suggestion-item"
        data-section-index={null}
        data-suggestion-index={0}
        id="react-autowhatever-1--item-0"
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        role="option"
      >
        <span>
          Edinburgh
        </span>
      </li>
      <li
        aria-selected={false}
        className="bpk-autosuggest__suggestion-item"
        data-section-index={null}
        data-suggestion-index={1}
        id="react-autowhatever-1--item-1"
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        role="option"
      >
        <span>
          Glasgow
        </span>
      </li>
      <li
        aria-selected={false}
        className="bpk-autosuggest__suggestion-item"
        data-section-index={null}
        data-suggestion-index={2}
        id="react-autowhatever-1--item-2"
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        role="option"
      >
        <span>
          London
        </span>
      </li>
    </ul>
  </div>
</div>
`;
